--- a/LogGuard.Lib/LogGuard.Lib.csproj
+++ b/LogGuard.Lib/LogGuard.Lib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E4B25314-1217-40A4-97FE-3DFF98892DBD}</ProjectGuid>
+    <ProjectGuid>{D6384E77-4809-4155-B68A-5141BC255BEC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Garage.Lib</RootNamespace>
-    <AssemblyName>Garage.Lib</AssemblyName>
+    <RootNamespace>LogGuard.Lib</RootNamespace>
+    <AssemblyName>LogGuard.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Auto.cs" />
+    <Compile Include="Entities\Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
